force-app/main/default/objects/Product_Visibility__c/Product_Visibility__c.object-meta.xml
<CustomObject>
    <label>Product Visibility</label>
    <pluralLabel>Product Visibilities</pluralLabel>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Rule No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>