force-app/main/default/objects/Product_Visibility__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Visibilities</relationshipLabel>
    <relationshipName>Product_Visibilities</relationshipName>
</CustomField>