force-app/main/default/objects/Product_Visibility__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>Lookup</type>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Product Visibilities</relationshipLabel>
    <relationshipName>Product_Visibilities</relationshipName>
</CustomField>