force-app/main/default/objects/Product_Visibility__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Visibilities</relationshipLabel>
    <relationshipName>Product_Visibilities</relationshipName>
</CustomField>