force-app/main/default/objects/Product_Visibility__c/fields/Scope_Label__c.field-meta.xml
<CustomField>
    <fullName>Scope_Label__c</fullName>
    <label>Scope Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>