force-app/main/default/objects/Product_Visibility__c/fields/Visibility_Level__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Level__c</fullName>
    <label>Visibility Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Nation</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>